@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US023

class Organization {
}

class GreenSpacesManager {
    email
}

class Agenda {
}

class Entry {
    startingDate
    status
    task
}

class Team {
    collaborators
}

class Email {
}

Organization "1" -- "1..*" GreenSpacesManager : has >
Organization "1" -- "1" Agenda : has >
GreenSpacesManager "1" -- "1" Team : selects  >
Agenda "1" -- "0..*" Entry : has >
Team "1" -- "1..*" Entry : assigned to >
GreenSpacesManager "1" -- "1..*" Email : sends >
Email "1" -- "1" Team : sent to >

@enduml